--- a/package.json
+++ b/package.json
@@ -21,18 +21,20 @@
   "homepage": "https://github.com/KelianB/movie-script-parser.git",
   "dependencies": {
     "cheerio": "1.0.0-rc.3",
+    "node-fetch": "^2.6.1",
     "request": "^2.88.2",
-    "request-promise-native": "^1.0.8",
     "string-similarity": "^4.0.1"
   },
   "devDependencies": {
+    "@types/cheerio": "^0.22.30",
+    "@types/node-fetch": "^2.5.12",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
     "@typescript-eslint/parser": "^4.14.0",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
-    "prettier": "^2.2.1",
     "jsdoc": "^3.6.4",
+    "prettier": "^2.2.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.3.5"
   }
